# cpp-start

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  format.py
.github/workflows/: ci.yaml
benchmarks/: alg_bench.cpp
include/mylib/: alg.hpp
src/: alg.cpp  main.cpp  perf_counters.hpp  perf_dummy.cpp  perf_linux.cpp
tests/: alg_tests.cpp
